CHANGES IN VERSION 1.32
-----------------------

BUG FIXES AND MINOR IMPROVEMENTS

    o (1.31.3) Add `BioCbooks` repository url to
    `checkIsPackageNameAlreadyInUse`, `VIEWS` file is pending.
    o (1.31.2) Fix logical length > 1 error in `checkImportSuggestions`
      (@vjcitn, #141)
    o (1.31.1) Simplify check for function lengths; remove excessive dots.

CHANGES IN VERSION 1.30
-----------------------

NEW FEATURES

    o (1.29.10) Check for `Sys.setenv` and `suppressWarnings`/`suppressMessages`
    o (1.29.8) Check for `sessionInfo` / `session_info` in vignette code.
    o (1.29.5) Check for installation calls in vignette code.
    o (1.29.1) Check for `install()` function calls in R code.

BUG FIXES

    o (1.29.14) Various internal improvements to the codebase.
    o (1.29.12) Checks on class membership code now include `is() ==` grammar.
    o (1.29.6) Use appropriate input (`pkgdir`) to internal checking functions.
    o (1.29.3) Add unit tests for legacy function searches.
    o (1.29.2) rename internal function from checkIsPackageAlreadyInRepo to
    checkIsPackageNameAlreadyInUse

CHANGES IN VERSION 1.27
-----------------------

BUG FIX

    o (1.27.17) Update support site watched tags. tags are case insensitive
    o (1.27.15) Reporting checking of vignette despite package type
    (@lshep, #136)
    o (1.27.9) Allow portability of child Rmd documents via parseFile
    o (1.27.3) Correct check for if package already exists in CRAN/Bioc
    o (1.27.3) Correct check for single colon use
    o (1.27.2) Correct path to R license database file by calling
    R.home('share').


NEW FEATURES

    o (1.27.16) Check vignettes for all package types (@lshep, #136)
    o (1.27.12) Check for `LazyData: TRUE` in the DESCRIPTION (@lshep, #128)
    o (1.27.11) R version dependency check in the 'DESCRIPTION' is now a
    'NOTE' (@lshep, #126)
    o (1.27.10) Check for 'error' and other keywords in signaler functions,